# wls-tui-py

./: README.md  pyproject.toml  requirements.txt  tui_app.py  tui_app.tcss  wls-tui.py
wls_tui/: __init__.py  app.tcss  tuiapp.py
